Bug 294410 - Tabbed windows do not know that the group was shaded (rolled up)
Summary: Tabbed windows do not know that the group was shaded (rolled up)
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: window-tabbing (other bugs)
Version First Reported In: 4.7.4
Platform: Unlisted Binaries Linux
: NOR minor
Target Milestone: 4.9.2
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-02-19 09:56 UTC by sirherrbatka
Modified: 2012-09-30 19:57 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.2
Sentry Crash Report:
thomas.luebking: ReviewRequest+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description sirherrbatka 2012-02-19 09:56:43 UTC
Version:           4.7.4 (using KDE 4.7.4) 
OS:                Linux

This bug is related to features: auto-unshade and window tabbing. It seems that tabbed window behaves as it would be untabbed.

Reproducible: Always

Steps to Reproduce:
Set auto-unshade, turn window tabbing on
Grop two windows in one tabbed group
Shade tabbed group (roll up)
Move mouse pointer on group, window should unshade (roll down)
Change tab (click on another tab)


Actual Results:  
Group is shaded (rolls up), exactly the same way as you would move mouse pointer from the tittlebar.


Expected Results:  
Group should behave as one window and It shouldn't auto-shade
Comment 1 Thomas Lübking 2012-02-19 14:23:53 UTC
applies to git master (4.9 tabbing code) as well
Comment 2 Thomas Lübking 2012-08-25 20:51:19 UTC
Have patch, RR as soon as RB allows me - doesn't take my helping diff :-(
Comment 3 Thomas Lübking 2012-08-28 20:52:18 UTC
http://git.reviewboard.kde.org/r/106258/
Comment 4 Thomas Lübking 2012-09-27 20:15:45 UTC
Git commit 0cbf8fc48356eaefa6ea2a85eca3b1a2a3cc0d0d by Thomas Lübking.
Committed on 25/08/2012 at 22:44.
Pushed by luebking into branch 'master'.

correctly align tabbing shade mode, including hover

REVIEW: 106258
FIXED-IN: 4.9.2

M  +8    -4    kwin/client.cpp
M  +2    -2    kwin/tabgroup.cpp

http://commits.kde.org/kde-workspace/0cbf8fc48356eaefa6ea2a85eca3b1a2a3cc0d0d
Comment 5 Thomas Lübking 2012-09-27 20:16:09 UTC
Git commit 3c0ef1abeba440bc58f9b857f56d300163e08c55 by Thomas Lübking.
Committed on 25/08/2012 at 22:44.
Pushed by luebking into branch 'KDE/4.9'.

correctly align tabbing shade mode, including hover

REVIEW: 106258
FIXED-IN: 4.9.2

M  +8    -4    kwin/client.cpp
M  +2    -2    kwin/tabgroup.cpp

http://commits.kde.org/kde-workspace/3c0ef1abeba440bc58f9b857f56d300163e08c55