correctly align tabbing shade mode, including hover

REVIEW: 106258
BUG: 294410
FIXED-IN: 4.9.2